--- a/components/Home/compontents/Patients/Patients.module.css
+++ b/components/Home/compontents/Patients/Patients.module.css
@@ -23,7 +23,9 @@
 
 
 }
-
+.hoverwidth{
+  
+}
 .card {
   width: 200px;
   height: 200px;
