--- a/components/StickyNavbar/HeaderSimple.module.css
+++ b/components/StickyNavbar/HeaderSimple.module.css
@@ -1,12 +1,9 @@
-.sticky {
+.header {
+  height: 10vh;
   position: fixed;
   width: 100%;
   z-index: 10; /* Adjust as needed */
   top: 0;
-}
-.header {
-  height: 10vh;
-  /* margin-bottom: rem(120px); */
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
